# steerable-antibody-gen

./: .gitignore  .tmp_rr_alpha0.json  .tmp_rr_alpha05.json  README.md  bulk_download.sh  pyproject.toml  pythoncore_3_9_backup.reg  retrain_overnight.ps1
.tmp_sanity/: smoke_config.yaml
.tmp_sanity/out_from_saved_cfg/: train_config.json
18151718/: Data_dictionary.csv
checkpoints/mlm_1m/: train_config.json
checkpoints/mlm_1m_paired_refine/: train_config.json
configs/: pretrain_oas_small.yaml  refine_antigen_hcdr3_infill.yaml  refine_antigen_hcdr3_infill_esm.yaml  refine_antigen_real_label.yaml  refine_oas_paired.yaml
scripts/: hcdr3_infill.py  inspect_antibody_antigen.py  inspect_oas.py  mlm_train.py  prepare_antibody_antigen.py  prepare_oas.py
src/: tokenizer.py
src/smallAntibodyGen/: __init__.py  antigen_tokenization.py  tokenizer.py  train.py
src/smallAntibodyGen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smallAntibodyGen/data/: MLMCollator.py  MLMSampler.py  oas.py
src/smallAntibodyGen/infill/: __init__.py  hcdr3.py
src/smallAntibodyGen/models/: esm_antigen_encoder.py  mlm.py
src/smallAntibodyGen/tests/: conftest.py  test_antigen_tokenization.py  test_bugfix_regressions.py  test_dataset_sampler_collator.py  test_esm_antigen_encoder.py  test_hcdr3_infill.py  test_mlm_model.py  test_mlm_train_config.py  test_oas_reader.py  test_prepare_antibody_antigen_cli.py  test_prepare_oas_cli.py  test_tokenizer.py  test_train_infra.py
