[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smallAntibodyGen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "tabulate>=0.9",
    "torch>=2.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Direction 1 (hybrid PLM antigen encoder). Only needed when
# antigen_encoder_type="esm"; imported lazily so the base install and the
# from-scratch stages never require these.
esm = [
    "transformers>=4.40",
    "peft>=0.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
